--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="UTF-8">
+  <meta name="UTF-8" content="Challenge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -40,7 +40,7 @@
           <p class="date">28 Jun 2020</p>
         </div>
         <div class="share tooltip">
-          <button class="share-button share-button-dark" type="button">
+          <button class="share-button share-button-dark" type="button" name="share-button">
             <img class="share-img" src="images/icon-share.svg" alt="">
             <img class="share-img hidden" src="images/share-dark.svg" alt="">
           </button>
@@ -58,7 +58,7 @@
         <img class="icon" src="images/icon-pinterest.svg" alt="">
       </div>
       <div class="share-mobile-button">
-        <button class="share-button share-button-dark" type="button" >
+        <button class="share-button share-button-dark" type="button" name="share-button" >
           <img class="share-img" src="images/icon-share.svg" alt="">
           <img class="share-img hidden" src="images/share-dark.svg" alt="">
         </button>
