--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p class="date">28 Jun 2020</p>
         </div>
         <div class="share tooltip">
-          <button class="share-button share-button-dark" type="button" name="share-button">
+          <button class="share-button share-button-dark">
             <img class="share-img" src="images/icon-share.svg" alt="">
             <img class="share-img hidden" src="images/share-dark.svg" alt="">
           </button>
@@ -58,7 +58,7 @@
         <img class="icon" src="images/icon-pinterest.svg" alt="">
       </div>
       <div class="share-mobile-button">
-        <button class="share-button share-button-dark" type="button" name="share-button" >
+        <button class="share-button share-button-dark">
           <img class="share-img" src="images/icon-share.svg" alt="">
           <img class="share-img hidden" src="images/share-dark.svg" alt="">
         </button>
